feat: use SCSS variables internally

--- a/src/lib/components/controls/ColorPickerPopup.scss
+++ b/src/lib/components/controls/ColorPickerPopup.scss
@@ -4,7 +4,7 @@
   :global(.picker_wrapper.popup),
   :global(.picker_wrapper.popup .picker_arrow::before),
   :global(.picker_wrapper.popup .picker_arrow::after) {
-    background: var(--jse-color-picker-background);
+    background: $color-picker-background;
     line-height: normal;
   }
 
@@ -13,20 +13,20 @@
   :global(.picker_editor input),
   :global(.picker_sample),
   :global(.picker_done button) {
-    box-shadow: var(--jse-color-picker-border-box-shadow);
+    box-shadow: $color-picker-border-box-shadow;
   }
 
   :global(.picker_editor input) {
-    background: var(--jse-background-color);
-    color: var(--jse-text-color);
+    background: $background-color;
+    color: $text-color;
   }
 
   :global(.picker_done button) {
-    background: var(--jse-button-background);
-    color: var(--jse-button-color);
+    background: $button-background;
+    color: $button-color;
   }
 
   :global(.picker_done button:hover) {
-    background: var(--jse-button-background-highlight);
+    background: $button-background-highlight;
   }
 }
