--- a/src/lib/components/controls/navigationBar/NavigationBarPathEditor.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBarPathEditor.scss
@@ -3,23 +3,23 @@
 .jse-navigation-bar-path-editor {
   flex: 1;
   display: flex;
-  border: var(--jse-edit-outline);
-  background: var(--jse-background-color);
+  border: $edit-outline;
+  background: $background-color;
 
   input.jse-navigation-bar-text {
     flex: 1;
     font-family: inherit;
     font-size: inherit;
     padding: 0 5px 1px;
-    background: var(--jse-background-color);
-    color: var(--jse-text-color);
+    background: $background-color;
+    color: $text-color;
     border: none;
     outline: none;
   }
 
   button {
     border: none;
-    background: var(--jse-background-color);
+    background: $background-color;
     cursor: pointer;
     font-family: inherit;
     font-size: 80%;
@@ -28,25 +28,25 @@
 
   button.jse-navigation-bar-copy {
     &.copied {
-      color: var(--jse-message-success-background);
+      color: $message-success-background;
     }
   }
 
   button.jse-navigation-bar-validation-error {
-    color: var(--jse-error-color);
+    color: $error-color;
   }
 
   &.error {
-    border-color: var(--jse-error-color);
+    border-color: $error-color;
 
     input.jse-navigation-bar-text {
-      color: var(--jse-error-color);
+      color: $error-color;
     }
   }
 
   .jse-copied-text {
-    background: var(--jse-message-success-background);
-    color: var(--jse-message-success-color);
+    background: $message-success-background;
+    color: $message-success-color;
     position: relative;
     margin: 2px;
     padding: 0 5px;
