--- a/src/lib/components/controls/tooltip/Tooltip.scss
+++ b/src/lib/components/controls/tooltip/Tooltip.scss
@@ -1,13 +1,13 @@
 @import '../../../styles';
 
 .jse-tooltip {
-  font-family: var(--jse-font-family);
-  font-size: var(--jse-font-size);
+  font-family: $font-family;
+  font-size: $font-size;
   line-height: normal;
   padding: $padding-half $padding;
   border-radius: $border-radius;
-  background: var(--jse-context-menu-background);
-  color: var(--jse-context-menu-color);
+  background: $context-menu-background;
+  color: $context-menu-color;
   white-space: nowrap;
-  box-shadow: var(--jse-controls-box-shadow);
+  box-shadow: $controls-box-shadow;
 }
