--- a/src/lib/components/modes/textmode/StatusBar.scss
+++ b/src/lib/components/modes/textmode/StatusBar.scss
@@ -1,22 +1,22 @@
 @import '../../../styles';
 
 .jse-status-bar {
-  background: var(--jse-panel-background);
-  color: var(--jse-panel-color-readonly);
-  font-family: var(--jse-font-family-mono);
-  font-size: var(--jse-font-size-mono);
+  background: $panel-background;
+  color: $panel-color-readonly;
+  font-family: $font-family-mono;
+  font-size: $font-size-mono;
   margin: 0;
 
-  border-top: var(--jse-panel-border);
-  border-left: var(--jse-main-border);
-  border-right: var(--jse-main-border);
+  border-top: $panel-border;
+  border-left: $main-border;
+  border-right: $main-border;
 
   &:last-child {
-    border-bottom: var(--jse-main-border);
+    border-bottom: $main-border;
   }
 
   display: flex;
-  gap: var(--jse-padding);
+  gap: $padding;
 
   .jse-status-bar-info {
     padding: 2px;
