--- a/src/lib/components/modes/treemode/ValidationErrorIcon.scss
+++ b/src/lib/components/modes/treemode/ValidationErrorIcon.scss
@@ -9,5 +9,5 @@ button.jse-validation-error {
   vertical-align: top;
   display: inline-flex;
 
-  color: var(--jse-warning-color);
+  color: $warning-color;
 }
