--- a/src/lib/components/JSONEditor.scss
+++ b/src/lib/components/JSONEditor.scss
@@ -1,4 +1,3 @@
-@import '../themes/jse-theme-default'; // do not put the .css extension here, else the file will not be bundled
 @import '../styles';
 
 .jse-main {
@@ -6,8 +5,8 @@
   height: 100%;
   min-width: 0;
   min-height: $contents-min-height;
-  font-family: var(--jse-font-family);
-  font-size: var(--jse-font-size);
+  font-family: $font-family;
+  font-size: $font-size;
   line-height: normal;
   position: relative;
   display: flex;
