--- a/src/lib/components/controls/navigationBar/NavigationBar.scss
+++ b/src/lib/components/controls/navigationBar/NavigationBar.scss
@@ -1,23 +1,23 @@
 @import '../../../styles';
 
 .jse-navigation-bar {
-  font-family: var(--jse-font-family-mono);
-  font-size: var(--jse-font-size-mono);
-  background: var(--jse-panel-background);
-  color: var(--jse-panel-button-color);
+  font-family: $font-family-mono;
+  font-size: $font-size-mono;
+  background: $panel-background;
+  color: $panel-button-color;
   padding: 0;
   margin: 0;
   display: flex;
   overflow: auto;
 
-  border-left: var(--jse-main-border);
-  border-right: var(--jse-main-border);
+  border-left: $main-border;
+  border-right: $main-border;
 
   .jse-navigation-bar-edit {
-    font-family: var(--jse-font-family-mono);
-    font-size: var(--jse-font-size-mono);
+    font-family: $font-family-mono;
+    font-size: $font-size-mono;
     padding: $padding-half $padding;
-    color: var(--jse-panel-color-readonly);
+    color: $panel-color-readonly;
     background: transparent;
     border: none;
     display: flex;
@@ -32,8 +32,8 @@
     &:focus,
     &:hover,
     &.editing {
-      background: var(--jse-panel-button-background-highlight);
-      color: var(--jse-panel-button-color-highlight);
+      background: $panel-button-background-highlight;
+      color: $panel-button-color-highlight;
       transition:
         color 0.2s ease-in,
         background 0.2s ease-in;
