--- a/src/lib/components/modes/treemode/TreeMode.scss
+++ b/src/lib/components/modes/treemode/TreeMode.scss
@@ -5,13 +5,13 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background: var(--jse-background-color);
+  background: $background-color;
   min-width: 0;
   min-height: 0;
-  font-family: var(--jse-font-family-mono);
-  font-size: var(--jse-font-size-mono);
-  color: var(--jse-text-color);
-  line-height: var(--jse-line-height);
+  font-family: $font-family-mono;
+  font-size: $font-size-mono;
+  color: $text-color;
+  line-height: $line-height;
 
   .jse-hidden-input-label {
     .jse-hidden-input {
@@ -31,22 +31,22 @@
     position: relative;
     height: 0;
     top: $padding;
-    margin-right: calc(var(--jse-padding) + 20px);
+    margin-right: calc($padding + 20px);
     margin-left: $padding;
     text-align: right;
     z-index: 3; // must be above the ContextMenuButton
   }
 
   &.no-main-menu {
-    border-top: var(--jse-main-border);
+    border-top: $main-border;
   }
 
   .jse-contents {
-    border-left: var(--jse-main-border);
-    border-right: var(--jse-main-border);
+    border-left: $main-border;
+    border-right: $main-border;
 
     &:last-child {
-      border-bottom: var(--jse-main-border);
+      border-bottom: $main-border;
     }
 
     flex: 1;
@@ -63,10 +63,10 @@
     .jse-loading {
       flex: 2;
       text-align: center;
-      color: var(--jse-panel-color-readonly);
+      color: $panel-color-readonly;
       box-sizing: border-box;
-      font-family: var(--jse-font-family);
-      font-size: var(--jse-font-size);
+      font-family: $font-family;
+      font-size: $font-size;
     }
   }
 }
