--- a/src/lib/components/modes/treemode/Welcome.scss
+++ b/src/lib/components/modes/treemode/Welcome.scss
@@ -3,18 +3,18 @@
 .jse-welcome {
   flex: 1;
   overflow: auto;
-  font-family: var(--jse-font-family);
-  font-size: var(--jse-font-size);
+  font-family: $font-family;
+  font-size: $font-size;
 
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  border-left: var(--jse-main-border);
-  border-right: var(--jse-main-border);
+  border-left: $main-border;
+  border-right: $main-border;
 
   &:last-child {
-    border-bottom: var(--jse-main-border);
+    border-bottom: $main-border;
   }
 
   .jse-space.jse-before {
@@ -36,7 +36,7 @@
     }
 
     .jse-welcome-info {
-      color: var(--jse-panel-color-readonly);
+      color: $panel-color-readonly;
     }
 
     button {
